@@ -414,8 +414,11 @@
   // Whether to run DICOM C-Move operations synchronously. If set to
   // "false" (the default), each incoming C-Move request results in
   // creating a new background job. Up to Orthanc 1.3.2, the implicit
-  // behavior was to use synchronous C-Move.
-  "SynchronousCMove" : false,
+  // behavior was to use synchronous C-Move. Between Orthanc 1.4.0 and
+  // 1.4.2, the default behavior was set to asynchronous C-Move. Since
+  // Orthanc 1.4.3, the default behavior is synchronous C-Move
+  // (backward compatibility with Orthanc <= 1.3.2).
+  "SynchronousCMove" : true,
 
   // Maximum number of completed jobs that are kept in memory. A
   // processing job is considered as complete once it is tagged as
